# rasmlite_ros

./: .gitmodules  CMakeLists.txt  package.xml
launch/: realsense_stereo.launch
src/: decimation_node.cpp
